# aerofraud

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/aerofraud/: __init__.py  config.py  logging.py
tests/: conftest.py
tests/unit/: test_config.py  test_logging.py
